--- a/css/stilo.css
+++ b/css/stilo.css
@@ -2,22 +2,23 @@
     margin: 0;
     padding: 0;
 }
+/* esta parte es de la tipografia*/
 @font-face{
     font-family: Sc;
     src: url(../fonts/Starcraft\ Normal.ttf);
 }
+/* +++++++++++ */ 
 body{
     background-color: #1a2737;
     width: 100%;
+    text-align: center;
 }
 h1 ,h2{
     font-family: Sc;
     color: white;
     text-transform: uppercase;
 }
-h1{
-    font-size: 8vw;
-}
+
 span{
     font-size: 11vw;
 }
@@ -29,6 +30,11 @@ header{
 .titulo{
     color: #6296C5;
     letter-spacing: 5px;
+    font-size: 8vw;
+}
+h1{
+    padding: 5vh;
+    font-size: 5vw;
 }
 .contenedor{
     padding: 5px;
@@ -42,22 +48,57 @@ header{
     text-align: center;
 }
 .unidad{
-    color: blue;
+    color: white;
     font-size: 2.5vw;
+    padding-bottom: 3vh;
 }
 img{
     width: 20vw;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
 }
 .item{
     width: auto;
 }
 .fo{
-    width: 100px;
+    padding: 3vh;
+    width: 10vw;
 }
 footer{
     background-color: #0a101e;
     width: 100%;
+    text-align: center;
 }
 .foh{
-    font-size: 2vw;
+    padding: 2vh;
+    font-size: 3vw;
+}
+img:hover {
+    border: white 1px solid;
+    transform: scale(1.1);
+  }
+  @media (max-width: 768px) {
+    .contenedor {
+        grid-template: 1fr / 1fr 1fr;
+    }
+    h1{
+        font-size: 6vw;
+    }
+    .foh{
+        font-size: 4vw;
+    }
+}
+
+@media (max-width: 480px) {
+    .contenedor {
+        grid-template: 1fr / 1fr; 
+    h1{
+        font-size: 8vw;
+    }
+    .foh{font-size: 5vw;}
+    .titulo{
+        font-size: 10vw;
+    }
+    }
 }
